--- a/nlw/styles/main.css
+++ b/nlw/styles/main.css
@@ -1,8 +1,5 @@
-/* CSS Cascading Stylesheet */
-
 :root {
-    /* variáveis CSS */
-    --color-background: #f0f0f7;
+    --color-background: #F0F0F7;
     --color-primary-lighter: #9871F5;
     --color-primary-light: #916BEA;
     --color-primary: #8257E5;
@@ -21,53 +18,45 @@
     --color-box-base: #FFFFFF;
     --color-box-footer: #FAFAFC;
     --color-small-info: #C1BCCC;
-    /* tamanho da fote */
-    /* tamanho padrão da fonte: 16px - 100% - 1rem*/
     font-size: 60%; /* controle das medidas rem */
-}
-
-* {
+  }
+  
+  * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-html, body {
-    height: 100vh; /* vh = View Height*/
-}
-
-body {
-
+    box-sizing: border-box;        
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box; 
+  }
+  
+  html,
+  body {
+    height: 100vh;
+  }
+  
+  body {
     background: var(--color-background);
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-body,
-input, 
-button, 
-textarea {
-    /*font: 500 1.6rem Poppins; -- essa linha inteira equivale as 3 propriedades descritos abaixo*/
-    font-weight: 500;
-    font-family: Poppins;
-    font-size: 1.6rem;
+  }
+  
+  body,
+  input,
+  button,
+  textarea {
+    font: 500 1.6rem Poppins;
     color: var(--color-text-base);
-}
-
-#container {
-    width: 90vw; /* VW = View Width */
+  }
+  
+  #container {
+    width: 90vw;
     max-width: 700px;
-}
-
-@media (max-width: 699px){
+  }
+  
+  @media (min-width: 700px) {
     :root {
-        font-size: 40%; /* modificar as medidas rem*/
+      font-size: 62.5%;
     }
-}
-
-@media (min-width: 700px) {
-    :root {
-        font-size: 62.5%; /* todo 1 rem vai ser relativo a 10px */
-    }
-}
+  }
