--- a/nlw/styles/partials/page-landing.css
+++ b/nlw/styles/partials/page-landing.css
@@ -1,143 +1,141 @@
 #page-landing {
     background: var(--color-primary);
-}
-
-#container {
-    color: var(--color-text-in-primary);
-}
-
-.logo-container img{
+  }
+  
+  #container {
+    color: var(--color-text-in-primary)
+  }
+  
+  .logo-container img {
     height: 10rem;
-}
-
-.logo-container {
+  }
+  
+  .logo-container {
     text-align: center;
     margin-bottom: 3.2rem;
-}
-
-.logo-container h2 {
+  }
+  
+  .logo-container h2 {
     font-weight: 500;
     font-size: 3.2rem;
     line-height: 4.6rem;
     margin-top: 0.8rem;
-}
-
-.hero-image {
+  }
+  
+  .hero-image {
     width: 100%;
-}
-
-.buttons-container {
+  }
+  
+  .buttons-container {
     display: flex;
     justify-content: center;
-    margin: 3.7rem 0;
-}
-
-.buttons-container a {
+    margin: 3.2rem 0;
+  }
+  
+  .buttons-container a {
     width: 30rem;
     height: 10.4rem;
-
     border-radius: 0.8rem;
-    /*margin-right: 1.6rem;*/
-
+    margin-right: 1.6rem;
+  
     font: 700 2.4rem Archivo;
-
+  
     display: flex;
     align-items: center;
     justify-content: center;
-
+  
     text-decoration: none;
-
-    transition: background 0.5s;
-
+  
     color: var(--color-button-text);
-}
-
-
-
-.buttons-container a img {
+  
+    transition: background 0.5s;
+  }
+  
+  .buttons-container a img {
     width: 4rem;
     margin-right: 2.4rem;
-}
-
-.buttons-container a.study {
+  }
+  
+  .buttons-container a.study {
     background: var(--color-primary-lighter);
-}
-
-.buttons-container a.study:hover{
+  }
+  
+  .buttons-container a.study:hover {
     background: var(--color-primary-light);
-}
-
-.buttons-container a.give-classes {
+  }
+  
+  .buttons-container a.give-classes {
     background: var(--color-secondary);
     margin: 0;
-}
-
-.buttons-container a.give-classes:hover {
+  }
+  
+  .buttons-container a.give-classes:hover {
     background: var(--color-secondary-dark);
-}
-
-.total-connections {
+  }
+  
+  .total-connections {
     font-size: 1.8rem;
-
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.total-connections img {
+  }
+  
+  .total-connections img {
     margin-left: 0.8rem;
-}
-
-@media (max-width: 1100px){
+  }
+  
+  @media (max-width: 1100px) {
     :root {
-    font-size: 38%;
+      font-size: 38%;
     }
-
+  
     .logo-container img {
-        height: 7rem;
+      height: 7rem;
     }
-}
-
-@media (min-width: 1100px) {
+  }
+  
+  @media (min-width: 1100px) {
     #page-landing #container {
-        max-width: 1100px;
-        display: grid;
-        grid-template-columns: 2fr 1fr 2fr;
-        grid-template-rows: 350px 1fr;
-        grid-template-areas: 
-        "proffy image image"
-        "button button texting";
-        column-gap: 87px;
-        row-gap: 86px;
+      max-width: 1100px;
+      display: grid;
+      grid-template-columns: 2fr 1fr 2fr;
+      grid-template-rows: 350px 1fr;
+      grid-template-areas: 
+        "proffy img img"
+        "button button texting"
+      ;
+      column-gap: 87px;
+      row-gap: 86px;
     }
-
-    .logo-container{
-        grid-area: proffy;
-        text-align: initial;
-        align-self: center;
-        margin: 0;
-
+  
+    .logo-container {
+     grid-area: proffy;
+     text-align: initial;
+     align-self: center;
+     margin: 0;
     }
-
-
+  
     .logo-container img {
-        height: 7rem;
+      height: 127px;
     }
-
-    .hero-image{
-        grid-area: image;
-        height: 350px;
+  
+    .hero-image {
+      grid-area: img;
+      height: 350px;
     }
-
-    .buttons-container{
-        grid-area: button;
-        justify-content: flex-start;
-        margin: 0;
+  
+    .buttons-container {
+      grid-area: button;
+      justify-content: flex-start;
+      margin: 0;
     }
-
-    .total-connections{
-        grid-area: texting;
-        justify-content: flex-end;
-        font-size: 1.2rem;
+  
+    .total-connections {
+      grid-area: texting;
+      justify-self: end;
+      font-size: 1.2rem;
     }
-}
+  
+    
+  
+  }
